# serializer version: 1
# name: test_render[attributes]
  list([
    OpenSoftwareSwitches([0b11100001, 0b10100100]),
    CloseSoftwareSwitches([0b00001110, 0b00000000]),
    SetCRInsertion(False),
    SetPaperOutSensor(True),
    SetPitch(Pitch.ELITE),
    SetQuality(Quality.DRAFT, scribe_mode=False),
    SetLeftMargin(0),
    SetPageLength(1584),
    SetDistanceBetweenLines(24),
    ClearAllTabs(),
    <CR>,
    SetQuality(Quality.NEAR_LETTER_QUALITY, scribe_mode=False),
    StartBoldface(),
    StartDoubleWidth(),
    b'#',
    b' ',
    b'A',
    b't',
    b't',
    b'r',
    b'i',
    b'b',
    b'u',
    b't',
    b'e',
    b's',
    StopDoubleWidth(),
    StopBoldface(),
    <CR>,
    <LF>,
    <CR>,
    <LF>,
    b'P',
    b'l',
    b'a',
    b'i',
    b'n',
    <CR>,
    <LF>,
    StartDoubleWidth(),
    b'D',
    b'o',
    b'u',
    b'b',
    b'l',
    b'e',
    b' ',
    b'w',
    b'i',
    b'd',
    b't',
    b'h',
    StopDoubleWidth(),
    <CR>,
    <LF>,
    StartUnderline(),
    b'U',
    b'n',
    b'd',
    b'e',
    b'r',
    b'l',
    b'i',
    b'n',
    b'e',
    b'd',
    StopUnderline(),
    <CR>,
    <LF>,
    StartBoldface(),
    b'B',
    b'o',
    b'l',
    b'd',
    b'f',
    b'a',
    b'c',
    b'e',
    StopBoldface(),
    <CR>,
    <LF>,
    StartHalfHeight(),
    b'H',
    b'a',
    b'l',
    b'f',
    b' ',
    b'h',
    b'e',
    b'i',
    b'g',
    b'h',
    b't',
    StopHalfHeight(),
    <CR>,
    <LF>,
    StartSuperscript(),
    b'S',
    b'u',
    b'p',
    b'e',
    b'r',
    b's',
    b'c',
    b'r',
    b'i',
    b'p',
    b't',
    StopSuperscriptOrSubscript(),
    <CR>,
    <LF>,
    StartSubscript(),
    b'S',
    b'u',
    b'b',
    b's',
    b'c',
    b'r',
    b'i',
    b'p',
    b't',
    StopSuperscriptOrSubscript(),
    <CR>,
    <LF>,
    b'U',
    b'n',
    b's',
    b'l',
    b'a',
    b's',
    b'h',
    b'e',
    b'd',
    b' ',
    b'0',
    <CR>,
    <LF>,
    PrintSlashedZero(CLOSE, [0b00000000, 0b10000000]),
    b'S',
    b'l',
    b'a',
    b's',
    b'h',
    b'e',
    b'd',
    b' ',
    b'0',
    PrintUnslashedZero(OPEN, [0b00000000, 0b10000000]),
    <CR>,
    <LF>,
    <CR>,
    <LF>,
    SetQuality(Quality.DRAFT, scribe_mode=False),
    FormFeed(),
    <CR>,
  ])
# ---
# name: test_render[full_monty]
  list([
    OpenSoftwareSwitches([0b11100001, 0b10100100]),
    CloseSoftwareSwitches([0b00001110, 0b00000000]),
    SetCRInsertion(False),
    SetPaperOutSensor(True),
    SetPitch(Pitch.ELITE),
    SetQuality(Quality.DRAFT, scribe_mode=False),
    SetLeftMargin(0),
    SetPageLength(1584),
    SetDistanceBetweenLines(24),
    ClearAllTabs(),
    <CR>,
    SetQuality(Quality.NEAR_LETTER_QUALITY, scribe_mode=False),
    StartBoldface(),
    StartDoubleWidth(),
    b'#',
    b' ',
    b'T',
    b'e',
    b's',
    b't',
    b' ',
    b'P',
    b'a',
    b'g',
    b'e',
    StopDoubleWidth(),
    StopBoldface(),
    <CR>,
    <LF>,
    <CR>,
    <LF>,
    StartBoldface(),
    StartDoubleWidth(),
    b'#',
    b' ',
    b'L',
    b'a',
    b'n',
    b'g',
    b'u',
    b'a',
    b'g',
    b'e',
    b's',
    StopDoubleWidth(),
    StopBoldface(),
    <CR>,
    <LF>,
    <CR>,
    <LF>,
    StartBoldface(),
    b'A',
    b'm',
    b'e',
    b'r',
    b'i',
    b'c',
    b'a',
    b'n',
    b':',
    OpenLanguageSwitches(Language.AMERICAN, OPEN, [0b11100000, 0b00000000]),
    b' ',
    b'#',
    b'$',
    b'@',
    b'`',
    b'\\',
    b'|',
    b'~',
    b'[',
    b']',
    b'(',
    b')',
    OpenLanguageSwitches(Language.AMERICAN, OPEN, [0b11100000, 0b00000000]),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b'B',
    b'r',
    b'i',
    b't',
    b'i',
    b's',
    b'h',
    b':',
    OpenLanguageSwitches(Language.BRITISH, OPEN, [0b00100000, 0b00000000]),
    CloseLanguageSwitches(Language.BRITISH, CLOSE, [0b11000000, 0b00000000]),
    b' ',
    b'#',
    b'$',
    b'@',
    b'`',
    b'\\',
    b'|',
    b'~',
    b'[',
    b']',
    b'(',
    b')',
    OpenLanguageSwitches(Language.AMERICAN, OPEN, [0b11100000, 0b00000000]),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b' ',
    b'G',
    b'e',
    b'r',
    b'm',
    b'a',
    b'n',
    b':',
    OpenLanguageSwitches(Language.GERMAN, OPEN, [0b11000000, 0b00000000]),
    CloseLanguageSwitches(Language.GERMAN, CLOSE, [0b00100000, 0b00000000]),
    b' ',
    b'#',
    b'$',
    b'@',
    b'`',
    b'\\',
    b'|',
    b'~',
    b'[',
    b']',
    b'(',
    b')',
    OpenLanguageSwitches(Language.AMERICAN, OPEN, [0b11100000, 0b00000000]),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b' ',
    b'F',
    b'r',
    b'e',
    b'n',
    b'c',
    b'h',
    b':',
    OpenLanguageSwitches(Language.FRENCH, OPEN, [0b10000000, 0b00000000]),
    CloseLanguageSwitches(Language.FRENCH, CLOSE, [0b01100000, 0b00000000]),
    b' ',
    b'#',
    b'$',
    b'@',
    b'`',
    b'\\',
    b'|',
    b'~',
    b'[',
    b']',
    b'(',
    b')',
    OpenLanguageSwitches(Language.AMERICAN, OPEN, [0b11100000, 0b00000000]),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b'S',
    b'w',
    b'e',
    b'd',
    b'i',
    b's',
    b'h',
    b':',
    OpenLanguageSwitches(Language.SWEDISH, OPEN, [0b01000000, 0b00000000]),
    CloseLanguageSwitches(Language.SWEDISH, CLOSE, [0b10100000, 0b00000000]),
    b' ',
    b'#',
    b'$',
    b'@',
    b'`',
    b'\\',
    b'|',
    b'~',
    b'[',
    b']',
    b'(',
    b')',
    OpenLanguageSwitches(Language.AMERICAN, OPEN, [0b11100000, 0b00000000]),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b'I',
    b't',
    b'a',
    b'l',
    b'i',
    b'a',
    b'n',
    b':',
    OpenLanguageSwitches(Language.ITALIAN, OPEN, [0b01100000, 0b00000000]),
    CloseLanguageSwitches(Language.ITALIAN, CLOSE, [0b10000000, 0b00000000]),
    b' ',
    b'#',
    b'$',
    b'@',
    b'`',
    b'\\',
    b'|',
    b'~',
    b'[',
    b']',
    b'(',
    b')',
    OpenLanguageSwitches(Language.AMERICAN, OPEN, [0b11100000, 0b00000000]),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b'S',
    b'p',
    b'a',
    b'n',
    b'i',
    b's',
    b'h',
    b':',
    CloseLanguageSwitches(Language.SPANISH, CLOSE, [0b11100000, 0b00000000]),
    b' ',
    b'#',
    b'$',
    b'@',
    b'`',
    b'\\',
    b'|',
    b'~',
    b'[',
    b']',
    b'(',
    b')',
    OpenLanguageSwitches(Language.AMERICAN, OPEN, [0b11100000, 0b00000000]),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b' ',
    b'D',
    b'a',
    b'n',
    b'i',
    b's',
    b'h',
    b':',
    OpenLanguageSwitches(Language.DANISH, OPEN, [0b10100000, 0b00000000]),
    CloseLanguageSwitches(Language.DANISH, CLOSE, [0b01000000, 0b00000000]),
    b' ',
    b'#',
    b'$',
    b'@',
    b'`',
    b'\\',
    b'|',
    b'~',
    b'[',
    b']',
    b'(',
    b')',
    OpenLanguageSwitches(Language.AMERICAN, OPEN, [0b11100000, 0b00000000]),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    StartDoubleWidth(),
    b'#',
    b' ',
    b'P',
    b'i',
    b't',
    b'c',
    b'h',
    StopDoubleWidth(),
    StopBoldface(),
    <CR>,
    <LF>,
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b'E',
    b'x',
    b't',
    b'e',
    b'n',
    b'd',
    b'e',
    b'd',
    b':',
    SetPitch(Pitch.EXTENDED),
    ClearAllTabs(),
    b' ',
    b'A',
    b' ',
    b'q',
    b'u',
    b'i',
    b'c',
    b'k',
    b' ',
    b'b',
    b'r',
    b'o',
    b'w',
    b'n',
    b' ',
    b'f',
    b'o',
    b'x',
    b' ',
    b'j',
    b'u',
    b'm',
    b'p',
    b'e',
    b'd',
    b' ',
    b'o',
    b'v',
    b'e',
    b'r',
    b' ',
    b't',
    b'h',
    b'e',
    b' ',
    b'l',
    b'a',
    b'z',
    b'y',
    b' ',
    b'd',
    b'o',
    b'g',
    SetPitch(Pitch.ELITE),
    ClearAllTabs(),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b'P',
    b'i',
    b'c',
    b'a',
    b':',
    SetPitch(Pitch.PICA),
    ClearAllTabs(),
    b' ',
    b'A',
    b' ',
    b'q',
    b'u',
    b'i',
    b'c',
    b'k',
    b' ',
    b'b',
    b'r',
    b'o',
    b'w',
    b'n',
    b' ',
    b'f',
    b'o',
    b'x',
    b' ',
    b'j',
    b'u',
    b'm',
    b'p',
    b'e',
    b'd',
    b' ',
    b'o',
    b'v',
    b'e',
    b'r',
    b' ',
    b't',
    b'h',
    b'e',
    b' ',
    b'l',
    b'a',
    b'z',
    b'y',
    b' ',
    b'd',
    b'o',
    b'g',
    SetPitch(Pitch.ELITE),
    ClearAllTabs(),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b'E',
    b'l',
    b'i',
    b't',
    b'e',
    b':',
    SetPitch(Pitch.ELITE),
    ClearAllTabs(),
    b' ',
    b'A',
    b' ',
    b'q',
    b'u',
    b'i',
    b'c',
    b'k',
    b' ',
    b'b',
    b'r',
    b'o',
    b'w',
    b'n',
    b' ',
    b'f',
    b'o',
    b'x',
    b' ',
    b'j',
    b'u',
    b'm',
    b'p',
    b'e',
    b'd',
    b' ',
    b'o',
    b'v',
    b'e',
    b'r',
    b' ',
    b't',
    b'h',
    b'e',
    b' ',
    b'l',
    b'a',
    b'z',
    b'y',
    b' ',
    b'd',
    b'o',
    b'g',
    SetPitch(Pitch.ELITE),
    ClearAllTabs(),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b'S',
    b'e',
    b'm',
    b'i',
    b'c',
    b'o',
    b'n',
    b'd',
    b'e',
    b'n',
    b's',
    b'e',
    b'd',
    b':',
    SetPitch(Pitch.SEMICONDENSED),
    ClearAllTabs(),
    b' ',
    b'A',
    b' ',
    b'q',
    b'u',
    b'i',
    b'c',
    b'k',
    b' ',
    b'b',
    b'r',
    b'o',
    b'w',
    b'n',
    b' ',
    b'f',
    b'o',
    b'x',
    b' ',
    b'j',
    b'u',
    b'm',
    b'p',
    b'e',
    b'd',
    b' ',
    b'o',
    b'v',
    b'e',
    b'r',
    b' ',
    b't',
    b'h',
    b'e',
    b' ',
    b'l',
    b'a',
    b'z',
    b'y',
    b' ',
    b'd',
    b'o',
    b'g',
    SetPitch(Pitch.ELITE),
    ClearAllTabs(),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b'C',
    b'o',
    b'n',
    b'd',
    b'e',
    b'n',
    b's',
    b'e',
    b'd',
    b':',
    SetPitch(Pitch.CONDENSED),
    ClearAllTabs(),
    b' ',
    b'A',
    b' ',
    b'q',
    b'u',
    b'i',
    b'c',
    b'k',
    b' ',
    b'b',
    b'r',
    b'o',
    b'w',
    b'n',
    b' ',
    b'f',
    b'o',
    b'x',
    b' ',
    b'j',
    b'u',
    b'm',
    b'p',
    b'e',
    b'd',
    b' ',
    b'o',
    b'v',
    b'e',
    b'r',
    b' ',
    b't',
    b'h',
    b'e',
    b' ',
    b'l',
    b'a',
    b'z',
    b'y',
    b' ',
    b'd',
    b'o',
    b'g',
    SetPitch(Pitch.ELITE),
    ClearAllTabs(),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b'U',
    b'l',
    b't',
    b'r',
    b'a',
    b'c',
    b'o',
    b'n',
    b'd',
    b'e',
    b'n',
    b's',
    b'e',
    b'd',
    b':',
    SetPitch(Pitch.ULTRACONDENSED),
    ClearAllTabs(),
    b' ',
    b'A',
    b' ',
    b'q',
    b'u',
    b'i',
    b'c',
    b'k',
    b' ',
    b'b',
    b'r',
    b'o',
    b'w',
    b'n',
    b' ',
    b'f',
    b'o',
    b'x',
    b' ',
    b'j',
    b'u',
    b'm',
    b'p',
    b'e',
    b'd',
    b' ',
    b'o',
    b'v',
    b'e',
    b'r',
    b' ',
    b't',
    b'h',
    b'e',
    b' ',
    b'l',
    b'a',
    b'z',
    b'y',
    b' ',
    b'd',
    b'o',
    b'g',
    SetPitch(Pitch.ELITE),
    ClearAllTabs(),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b'P',
    b'i',
    b'c',
    b'a',
    b' ',
    b'(',
    b'P',
    b'r',
    b'o',
    b'p',
    b'o',
    b'r',
    b't',
    b'i',
    b'o',
    b'n',
    b'a',
    b'l',
    b')',
    b':',
    SetPitch(Pitch.PICA_PROPORTIONAL),
    ClearAllTabs(),
    b' ',
    b'A',
    b' ',
    b'q',
    b'u',
    b'i',
    b'c',
    b'k',
    b' ',
    b'b',
    b'r',
    b'o',
    b'w',
    b'n',
    b' ',
    b'f',
    b'o',
    b'x',
    b' ',
    b'j',
    b'u',
    b'm',
    b'p',
    b'e',
    b'd',
    b' ',
    b'o',
    b'v',
    b'e',
    b'r',
    b' ',
    b't',
    b'h',
    b'e',
    b' ',
    b'l',
    b'a',
    b'z',
    b'y',
    b' ',
    b'd',
    b'o',
    b'g',
    SetPitch(Pitch.ELITE),
    ClearAllTabs(),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b'E',
    b'l',
    b'i',
    b't',
    b'e',
    b' ',
    b'(',
    b'P',
    b'r',
    b'o',
    b'p',
    b'o',
    b'r',
    b't',
    b'i',
    b'o',
    b'n',
    b'a',
    b'l',
    b')',
    b':',
    SetPitch(Pitch.ELITE_PROPORTIONAL),
    ClearAllTabs(),
    b' ',
    b'A',
    b' ',
    b'q',
    b'u',
    b'i',
    b'c',
    b'k',
    b' ',
    b'b',
    b'r',
    b'o',
    b'w',
    b'n',
    b' ',
    b'f',
    b'o',
    b'x',
    b' ',
    b'j',
    b'u',
    b'm',
    b'p',
    b'e',
    b'd',
    b' ',
    b'o',
    b'v',
    b'e',
    b'r',
    b' ',
    b't',
    b'h',
    b'e',
    b' ',
    b'l',
    b'a',
    b'z',
    b'y',
    b' ',
    b'd',
    b'o',
    b'g',
    SetPitch(Pitch.ELITE),
    ClearAllTabs(),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    StartDoubleWidth(),
    b'#',
    b' ',
    b'Q',
    b'u',
    b'a',
    b'l',
    b'i',
    b't',
    b'y',
    StopDoubleWidth(),
    StopBoldface(),
    <CR>,
    <LF>,
    <CR>,
    <LF>,
    SetQuality(Quality.DRAFT, scribe_mode=False),
    StartBoldface(),
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b'd',
    b'r',
    b'a',
    b'f',
    b't',
    b':',
    StopBoldface(),
    b' ',
    b'A',
    b' ',
    b'q',
    b'u',
    b'i',
    b'c',
    b'k',
    b' ',
    b'b',
    b'r',
    b'o',
    b'w',
    b'n',
    b' ',
    b'f',
    b'o',
    b'x',
    b' ',
    b'j',
    b'u',
    b'm',
    b'p',
    b'e',
    b'd',
    b' ',
    b'o',
    b'v',
    b'e',
    b'r',
    b' ',
    b't',
    b'h',
    b'e',
    b' ',
    b'l',
    b'a',
    b'z',
    b'y',
    b' ',
    b'd',
    b'o',
    b'g',
    SetQuality(Quality.DRAFT, scribe_mode=False),
    <CR>,
    <LF>,
    SetQuality(Quality.CORRESPONDENCE, scribe_mode=False),
    StartBoldface(),
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b'c',
    b'o',
    b'r',
    b'r',
    b'e',
    b's',
    b'p',
    b'o',
    b'n',
    b'd',
    b'e',
    b'n',
    b'c',
    b'e',
    b':',
    StopBoldface(),
    b' ',
    b'A',
    b' ',
    b'q',
    b'u',
    b'i',
    b'c',
    b'k',
    b' ',
    b'b',
    b'r',
    b'o',
    b'w',
    b'n',
    b' ',
    b'f',
    b'o',
    b'x',
    b' ',
    b'j',
    b'u',
    b'm',
    b'p',
    b'e',
    b'd',
    b' ',
    b'o',
    b'v',
    b'e',
    b'r',
    b' ',
    b't',
    b'h',
    b'e',
    b' ',
    b'l',
    b'a',
    b'z',
    b'y',
    b' ',
    b'd',
    b'o',
    b'g',
    SetQuality(Quality.DRAFT, scribe_mode=False),
    <CR>,
    <LF>,
    SetQuality(Quality.NEAR_LETTER_QUALITY, scribe_mode=False),
    StartBoldface(),
    b'n',
    b'e',
    b'a',
    b'r',
    b' ',
    b'l',
    b'e',
    b't',
    b't',
    b'e',
    b'r',
    b' ',
    b'q',
    b'u',
    b'a',
    b'l',
    b'i',
    b't',
    b'y',
    b':',
    StopBoldface(),
    b' ',
    b'A',
    b' ',
    b'q',
    b'u',
    b'i',
    b'c',
    b'k',
    b' ',
    b'b',
    b'r',
    b'o',
    b'w',
    b'n',
    b' ',
    b'f',
    b'o',
    b'x',
    b' ',
    b'j',
    b'u',
    b'm',
    b'p',
    b'e',
    b'd',
    b' ',
    b'o',
    b'v',
    b'e',
    b'r',
    b' ',
    b't',
    b'h',
    b'e',
    b' ',
    b'l',
    b'a',
    b'z',
    b'y',
    b' ',
    b'd',
    b'o',
    b'g',
    SetQuality(Quality.DRAFT, scribe_mode=False),
    <CR>,
    <LF>,
    StartBoldface(),
    StartDoubleWidth(),
    b'#',
    b' ',
    b'M',
    b'o',
    b'u',
    b's',
    b'e',
    b'T',
    b'e',
    b'x',
    b't',
    StopDoubleWidth(),
    StopBoldface(),
    <CR>,
    <LF>,
    <CR>,
    <LF>,
    b'\xc0',
    b'\xc1',
    b'\xc2',
    b'\xc3',
    b'\xc4',
    b'\xc5',
    b'\xc6',
    b'\xc7',
    b'\xc8',
    b'\xc9',
    b'\xca',
    b'\xcb',
    b'\xcc',
    b'\xcd',
    b'\xce',
    b'\xcf',
    b'\xd0',
    b'\xd1',
    b'\xd2',
    b'\xd3',
    b'\xd4',
    b'\xd5',
    b'\xd6',
    b'\xd7',
    b'\xd8',
    b'\xd9',
    b'\xda',
    b'\xdb',
    b'\xdc',
    b'\xdd',
    b'\xde',
    b'\xdf',
    <CR>,
    <LF>,
    <CR>,
    <LF>,
    SetQuality(Quality.DRAFT, scribe_mode=False),
    FormFeed(),
    <CR>,
  ])
# ---
# name: test_render[languages]
  list([
    OpenSoftwareSwitches([0b11100001, 0b10100100]),
    CloseSoftwareSwitches([0b00001110, 0b00000000]),
    SetCRInsertion(False),
    SetPaperOutSensor(True),
    SetPitch(Pitch.ELITE),
    SetQuality(Quality.DRAFT, scribe_mode=False),
    SetLeftMargin(0),
    SetPageLength(1584),
    SetDistanceBetweenLines(24),
    ClearAllTabs(),
    <CR>,
    SetQuality(Quality.NEAR_LETTER_QUALITY, scribe_mode=False),
    StartBoldface(),
    StartDoubleWidth(),
    b'#',
    b' ',
    b'L',
    b'a',
    b'n',
    b'g',
    b'u',
    b'a',
    b'g',
    b'e',
    b's',
    StopDoubleWidth(),
    StopBoldface(),
    <CR>,
    <LF>,
    <CR>,
    <LF>,
    StartBoldface(),
    b'A',
    b'm',
    b'e',
    b'r',
    b'i',
    b'c',
    b'a',
    b'n',
    b':',
    OpenLanguageSwitches(Language.AMERICAN, OPEN, [0b11100000, 0b00000000]),
    b' ',
    b'#',
    b'$',
    b'@',
    b'`',
    b'\\',
    b'|',
    b'~',
    b'[',
    b']',
    b'(',
    b')',
    OpenLanguageSwitches(Language.AMERICAN, OPEN, [0b11100000, 0b00000000]),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b'B',
    b'r',
    b'i',
    b't',
    b'i',
    b's',
    b'h',
    b':',
    OpenLanguageSwitches(Language.BRITISH, OPEN, [0b00100000, 0b00000000]),
    CloseLanguageSwitches(Language.BRITISH, CLOSE, [0b11000000, 0b00000000]),
    b' ',
    b'#',
    b'$',
    b'@',
    b'`',
    b'\\',
    b'|',
    b'~',
    b'[',
    b']',
    b'(',
    b')',
    OpenLanguageSwitches(Language.AMERICAN, OPEN, [0b11100000, 0b00000000]),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b' ',
    b'G',
    b'e',
    b'r',
    b'm',
    b'a',
    b'n',
    b':',
    OpenLanguageSwitches(Language.GERMAN, OPEN, [0b11000000, 0b00000000]),
    CloseLanguageSwitches(Language.GERMAN, CLOSE, [0b00100000, 0b00000000]),
    b' ',
    b'#',
    b'$',
    b'@',
    b'`',
    b'\\',
    b'|',
    b'~',
    b'[',
    b']',
    b'(',
    b')',
    OpenLanguageSwitches(Language.AMERICAN, OPEN, [0b11100000, 0b00000000]),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b' ',
    b'F',
    b'r',
    b'e',
    b'n',
    b'c',
    b'h',
    b':',
    OpenLanguageSwitches(Language.FRENCH, OPEN, [0b10000000, 0b00000000]),
    CloseLanguageSwitches(Language.FRENCH, CLOSE, [0b01100000, 0b00000000]),
    b' ',
    b'#',
    b'$',
    b'@',
    b'`',
    b'\\',
    b'|',
    b'~',
    b'[',
    b']',
    b'(',
    b')',
    OpenLanguageSwitches(Language.AMERICAN, OPEN, [0b11100000, 0b00000000]),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b'S',
    b'w',
    b'e',
    b'd',
    b'i',
    b's',
    b'h',
    b':',
    OpenLanguageSwitches(Language.SWEDISH, OPEN, [0b01000000, 0b00000000]),
    CloseLanguageSwitches(Language.SWEDISH, CLOSE, [0b10100000, 0b00000000]),
    b' ',
    b'#',
    b'$',
    b'@',
    b'`',
    b'\\',
    b'|',
    b'~',
    b'[',
    b']',
    b'(',
    b')',
    OpenLanguageSwitches(Language.AMERICAN, OPEN, [0b11100000, 0b00000000]),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b'I',
    b't',
    b'a',
    b'l',
    b'i',
    b'a',
    b'n',
    b':',
    OpenLanguageSwitches(Language.ITALIAN, OPEN, [0b01100000, 0b00000000]),
    CloseLanguageSwitches(Language.ITALIAN, CLOSE, [0b10000000, 0b00000000]),
    b' ',
    b'#',
    b'$',
    b'@',
    b'`',
    b'\\',
    b'|',
    b'~',
    b'[',
    b']',
    b'(',
    b')',
    OpenLanguageSwitches(Language.AMERICAN, OPEN, [0b11100000, 0b00000000]),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b'S',
    b'p',
    b'a',
    b'n',
    b'i',
    b's',
    b'h',
    b':',
    CloseLanguageSwitches(Language.SPANISH, CLOSE, [0b11100000, 0b00000000]),
    b' ',
    b'#',
    b'$',
    b'@',
    b'`',
    b'\\',
    b'|',
    b'~',
    b'[',
    b']',
    b'(',
    b')',
    OpenLanguageSwitches(Language.AMERICAN, OPEN, [0b11100000, 0b00000000]),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b' ',
    b'D',
    b'a',
    b'n',
    b'i',
    b's',
    b'h',
    b':',
    OpenLanguageSwitches(Language.DANISH, OPEN, [0b10100000, 0b00000000]),
    CloseLanguageSwitches(Language.DANISH, CLOSE, [0b01000000, 0b00000000]),
    b' ',
    b'#',
    b'$',
    b'@',
    b'`',
    b'\\',
    b'|',
    b'~',
    b'[',
    b']',
    b'(',
    b')',
    OpenLanguageSwitches(Language.AMERICAN, OPEN, [0b11100000, 0b00000000]),
    StopBoldface(),
    <CR>,
    <LF>,
    SetQuality(Quality.DRAFT, scribe_mode=False),
    FormFeed(),
    <CR>,
  ])
# ---
# name: test_render[markdown]
  list([
    OpenSoftwareSwitches([0b11100001, 0b10100100]),
    CloseSoftwareSwitches([0b00001110, 0b00000000]),
    SetCRInsertion(False),
    SetPaperOutSensor(True),
    SetPitch(Pitch.ELITE),
    SetQuality(Quality.DRAFT, scribe_mode=False),
    SetLeftMargin(0),
    SetPageLength(1584),
    SetDistanceBetweenLines(24),
    ClearAllTabs(),
    <CR>,
    StartBoldface(),
    StartDoubleWidth(),
    b'#',
    b' ',
    b'M',
    b'a',
    b'r',
    b'k',
    b'd',
    b'o',
    b'w',
    b'n',
    StopDoubleWidth(),
    StopBoldface(),
    <CR>,
    <LF>,
    <CR>,
    <LF>,
    b'A',
    b' ',
    b'p',
    b'a',
    b'r',
    b'a',
    b'g',
    b'r',
    b'a',
    b'p',
    b'h',
    b' ',
    b'w',
    b'i',
    b't',
    b'h',
    b' ',
    StartBoldface(),
    b'e',
    b'm',
    b'p',
    b'h',
    b'a',
    b's',
    b'i',
    b'z',
    b'e',
    b'd',
    StopBoldface(),
    b' ',
    b'a',
    b'n',
    b'd',
    b' ',
    StartDoubleWidth(),
    StartBoldface(),
    b'b',
    b'o',
    b'l',
    b'd',
    StopBoldface(),
    StopDoubleWidth(),
    b' ',
    b't',
    b'e',
    b'x',
    b't',
    b',',
    b' ',
    SetColor(Color.GREEN),
    b'i',
    b'n',
    b'l',
    b'i',
    b'n',
    b'e',
    b' ',
    b'c',
    b'o',
    b'd',
    b'e',
    SetColor(Color.BLACK),
    b' ',
    b'a',
    b'n',
    b'd',
    b' ',
    b'a',
    b' ',
    SetColor(Color.PURPLE),
    b'l',
    b'i',
    b'n',
    b'k',
    SetColor(Color.BLACK),
    b'.',
    <CR>,
    <LF>,
    <CR>,
    <LF>,
    <CR>,
    <LF>,
    <CR>,
    <LF>,
    b'-',
    b'-',
    b'-',
    <CR>,
    <LF>,
    <CR>,
    <LF>,
    SetColor(Color.GREEN),
    b'f',
    b'o',
    b'o',
    b' ',
    b'=',
    b' ',
    b'1',
    SetColor(Color.BLACK),
    FormFeed(),
    <CR>,
  ])
# ---
# name: test_render[mousetext]
  list([
    OpenSoftwareSwitches([0b11100001, 0b10100100]),
    CloseSoftwareSwitches([0b00001110, 0b00000000]),
    SetCRInsertion(False),
    SetPaperOutSensor(True),
    SetPitch(Pitch.ELITE),
    SetQuality(Quality.DRAFT, scribe_mode=False),
    SetLeftMargin(0),
    SetPageLength(1584),
    SetDistanceBetweenLines(24),
    ClearAllTabs(),
    <CR>,
    SetQuality(Quality.NEAR_LETTER_QUALITY, scribe_mode=False),
    StartBoldface(),
    StartDoubleWidth(),
    b'#',
    b' ',
    b'M',
    b'o',
    b'u',
    b's',
    b'e',
    b'T',
    b'e',
    b'x',
    b't',
    StopDoubleWidth(),
    StopBoldface(),
    <CR>,
    <LF>,
    <CR>,
    <LF>,
    b'\xc0',
    b'\xc1',
    b'\xc2',
    b'\xc3',
    b'\xc4',
    b'\xc5',
    b'\xc6',
    b'\xc7',
    b'\xc8',
    b'\xc9',
    b'\xca',
    b'\xcb',
    b'\xcc',
    b'\xcd',
    b'\xce',
    b'\xcf',
    b'\xd0',
    b'\xd1',
    b'\xd2',
    b'\xd3',
    b'\xd4',
    b'\xd5',
    b'\xd6',
    b'\xd7',
    b'\xd8',
    b'\xd9',
    b'\xda',
    b'\xdb',
    b'\xdc',
    b'\xdd',
    b'\xde',
    b'\xdf',
    <CR>,
    <LF>,
    <CR>,
    <LF>,
    SetQuality(Quality.DRAFT, scribe_mode=False),
    FormFeed(),
    <CR>,
  ])
# ---
# name: test_render[pitch]
  list([
    OpenSoftwareSwitches([0b11100001, 0b10100100]),
    CloseSoftwareSwitches([0b00001110, 0b00000000]),
    SetCRInsertion(False),
    SetPaperOutSensor(True),
    SetPitch(Pitch.ELITE),
    SetQuality(Quality.DRAFT, scribe_mode=False),
    SetLeftMargin(0),
    SetPageLength(1584),
    SetDistanceBetweenLines(24),
    ClearAllTabs(),
    <CR>,
    SetQuality(Quality.NEAR_LETTER_QUALITY, scribe_mode=False),
    StartBoldface(),
    StartDoubleWidth(),
    b'#',
    b' ',
    b'P',
    b'i',
    b't',
    b'c',
    b'h',
    StopDoubleWidth(),
    StopBoldface(),
    <CR>,
    <LF>,
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b'E',
    b'x',
    b't',
    b'e',
    b'n',
    b'd',
    b'e',
    b'd',
    b':',
    SetPitch(Pitch.EXTENDED),
    ClearAllTabs(),
    b' ',
    b'A',
    b' ',
    b'q',
    b'u',
    b'i',
    b'c',
    b'k',
    b' ',
    b'b',
    b'r',
    b'o',
    b'w',
    b'n',
    b' ',
    b'f',
    b'o',
    b'x',
    b' ',
    b'j',
    b'u',
    b'm',
    b'p',
    b'e',
    b'd',
    b' ',
    b'o',
    b'v',
    b'e',
    b'r',
    b' ',
    b't',
    b'h',
    b'e',
    b' ',
    b'l',
    b'a',
    b'z',
    b'y',
    b' ',
    b'd',
    b'o',
    b'g',
    SetPitch(Pitch.ELITE),
    ClearAllTabs(),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b'P',
    b'i',
    b'c',
    b'a',
    b':',
    SetPitch(Pitch.PICA),
    ClearAllTabs(),
    b' ',
    b'A',
    b' ',
    b'q',
    b'u',
    b'i',
    b'c',
    b'k',
    b' ',
    b'b',
    b'r',
    b'o',
    b'w',
    b'n',
    b' ',
    b'f',
    b'o',
    b'x',
    b' ',
    b'j',
    b'u',
    b'm',
    b'p',
    b'e',
    b'd',
    b' ',
    b'o',
    b'v',
    b'e',
    b'r',
    b' ',
    b't',
    b'h',
    b'e',
    b' ',
    b'l',
    b'a',
    b'z',
    b'y',
    b' ',
    b'd',
    b'o',
    b'g',
    SetPitch(Pitch.ELITE),
    ClearAllTabs(),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b'E',
    b'l',
    b'i',
    b't',
    b'e',
    b':',
    SetPitch(Pitch.ELITE),
    ClearAllTabs(),
    b' ',
    b'A',
    b' ',
    b'q',
    b'u',
    b'i',
    b'c',
    b'k',
    b' ',
    b'b',
    b'r',
    b'o',
    b'w',
    b'n',
    b' ',
    b'f',
    b'o',
    b'x',
    b' ',
    b'j',
    b'u',
    b'm',
    b'p',
    b'e',
    b'd',
    b' ',
    b'o',
    b'v',
    b'e',
    b'r',
    b' ',
    b't',
    b'h',
    b'e',
    b' ',
    b'l',
    b'a',
    b'z',
    b'y',
    b' ',
    b'd',
    b'o',
    b'g',
    SetPitch(Pitch.ELITE),
    ClearAllTabs(),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b'S',
    b'e',
    b'm',
    b'i',
    b'c',
    b'o',
    b'n',
    b'd',
    b'e',
    b'n',
    b's',
    b'e',
    b'd',
    b':',
    SetPitch(Pitch.SEMICONDENSED),
    ClearAllTabs(),
    b' ',
    b'A',
    b' ',
    b'q',
    b'u',
    b'i',
    b'c',
    b'k',
    b' ',
    b'b',
    b'r',
    b'o',
    b'w',
    b'n',
    b' ',
    b'f',
    b'o',
    b'x',
    b' ',
    b'j',
    b'u',
    b'm',
    b'p',
    b'e',
    b'd',
    b' ',
    b'o',
    b'v',
    b'e',
    b'r',
    b' ',
    b't',
    b'h',
    b'e',
    b' ',
    b'l',
    b'a',
    b'z',
    b'y',
    b' ',
    b'd',
    b'o',
    b'g',
    SetPitch(Pitch.ELITE),
    ClearAllTabs(),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b'C',
    b'o',
    b'n',
    b'd',
    b'e',
    b'n',
    b's',
    b'e',
    b'd',
    b':',
    SetPitch(Pitch.CONDENSED),
    ClearAllTabs(),
    b' ',
    b'A',
    b' ',
    b'q',
    b'u',
    b'i',
    b'c',
    b'k',
    b' ',
    b'b',
    b'r',
    b'o',
    b'w',
    b'n',
    b' ',
    b'f',
    b'o',
    b'x',
    b' ',
    b'j',
    b'u',
    b'm',
    b'p',
    b'e',
    b'd',
    b' ',
    b'o',
    b'v',
    b'e',
    b'r',
    b' ',
    b't',
    b'h',
    b'e',
    b' ',
    b'l',
    b'a',
    b'z',
    b'y',
    b' ',
    b'd',
    b'o',
    b'g',
    SetPitch(Pitch.ELITE),
    ClearAllTabs(),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b'U',
    b'l',
    b't',
    b'r',
    b'a',
    b'c',
    b'o',
    b'n',
    b'd',
    b'e',
    b'n',
    b's',
    b'e',
    b'd',
    b':',
    SetPitch(Pitch.ULTRACONDENSED),
    ClearAllTabs(),
    b' ',
    b'A',
    b' ',
    b'q',
    b'u',
    b'i',
    b'c',
    b'k',
    b' ',
    b'b',
    b'r',
    b'o',
    b'w',
    b'n',
    b' ',
    b'f',
    b'o',
    b'x',
    b' ',
    b'j',
    b'u',
    b'm',
    b'p',
    b'e',
    b'd',
    b' ',
    b'o',
    b'v',
    b'e',
    b'r',
    b' ',
    b't',
    b'h',
    b'e',
    b' ',
    b'l',
    b'a',
    b'z',
    b'y',
    b' ',
    b'd',
    b'o',
    b'g',
    SetPitch(Pitch.ELITE),
    ClearAllTabs(),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b' ',
    b'P',
    b'i',
    b'c',
    b'a',
    b' ',
    b'(',
    b'P',
    b'r',
    b'o',
    b'p',
    b'o',
    b'r',
    b't',
    b'i',
    b'o',
    b'n',
    b'a',
    b'l',
    b')',
    b':',
    SetPitch(Pitch.PICA_PROPORTIONAL),
    ClearAllTabs(),
    b' ',
    b'A',
    b' ',
    b'q',
    b'u',
    b'i',
    b'c',
    b'k',
    b' ',
    b'b',
    b'r',
    b'o',
    b'w',
    b'n',
    b' ',
    b'f',
    b'o',
    b'x',
    b' ',
    b'j',
    b'u',
    b'm',
    b'p',
    b'e',
    b'd',
    b' ',
    b'o',
    b'v',
    b'e',
    b'r',
    b' ',
    b't',
    b'h',
    b'e',
    b' ',
    b'l',
    b'a',
    b'z',
    b'y',
    b' ',
    b'd',
    b'o',
    b'g',
    SetPitch(Pitch.ELITE),
    ClearAllTabs(),
    StopBoldface(),
    <CR>,
    <LF>,
    StartBoldface(),
    b'E',
    b'l',
    b'i',
    b't',
    b'e',
    b' ',
    b'(',
    b'P',
    b'r',
    b'o',
    b'p',
    b'o',
    b'r',
    b't',
    b'i',
    b'o',
    b'n',
    b'a',
    b'l',
    b')',
    b':',
    SetPitch(Pitch.ELITE_PROPORTIONAL),
    ClearAllTabs(),
    b' ',
    b'A',
    b' ',
    b'q',
    b'u',
    b'i',
    b'c',
    b'k',
    b' ',
    b'b',
    b'r',
    b'o',
    b'w',
    b'n',
    b' ',
    b'f',
    b'o',
    b'x',
    b' ',
    b'j',
    b'u',
    b'm',
    b'p',
    b'e',
    b'd',
    b' ',
    b'o',
    b'v',
    b'e',
    b'r',
    b' ',
    b't',
    b'h',
    b'e',
    b' ',
    b'l',
    b'a',
    b'z',
    b'y',
    b' ',
    b'd',
    b'o',
    b'g',
    SetPitch(Pitch.ELITE),
    ClearAllTabs(),
    StopBoldface(),
    <CR>,
    <LF>,
    SetQuality(Quality.DRAFT, scribe_mode=False),
    FormFeed(),
    <CR>,
  ])
# ---
# name: test_render[quality]
  list([
    OpenSoftwareSwitches([0b11100001, 0b10100100]),
    CloseSoftwareSwitches([0b00001110, 0b00000000]),
    SetCRInsertion(False),
    SetPaperOutSensor(True),
    SetPitch(Pitch.ELITE),
    SetQuality(Quality.DRAFT, scribe_mode=False),
    SetLeftMargin(0),
    SetPageLength(1584),
    SetDistanceBetweenLines(24),
    ClearAllTabs(),
    <CR>,
    SetQuality(Quality.NEAR_LETTER_QUALITY, scribe_mode=False),
    StartBoldface(),
    StartDoubleWidth(),
    b'#',
    b' ',
    b'Q',
    b'u',
    b'a',
    b'l',
    b'i',
    b't',
    b'y',
    StopDoubleWidth(),
    StopBoldface(),
    <CR>,
    <LF>,
    <CR>,
    <LF>,
    SetQuality(Quality.DRAFT, scribe_mode=False),
    StartBoldface(),
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b'd',
    b'r',
    b'a',
    b'f',
    b't',
    b':',
    StopBoldface(),
    b' ',
    b'A',
    b' ',
    b'q',
    b'u',
    b'i',
    b'c',
    b'k',
    b' ',
    b'b',
    b'r',
    b'o',
    b'w',
    b'n',
    b' ',
    b'f',
    b'o',
    b'x',
    b' ',
    b'j',
    b'u',
    b'm',
    b'p',
    b'e',
    b'd',
    b' ',
    b'o',
    b'v',
    b'e',
    b'r',
    b' ',
    b't',
    b'h',
    b'e',
    b' ',
    b'l',
    b'a',
    b'z',
    b'y',
    b' ',
    b'd',
    b'o',
    b'g',
    SetQuality(Quality.DRAFT, scribe_mode=False),
    <CR>,
    <LF>,
    SetQuality(Quality.CORRESPONDENCE, scribe_mode=False),
    StartBoldface(),
    b' ',
    b' ',
    b' ',
    b' ',
    b' ',
    b'c',
    b'o',
    b'r',
    b'r',
    b'e',
    b's',
    b'p',
    b'o',
    b'n',
    b'd',
    b'e',
    b'n',
    b'c',
    b'e',
    b':',
    StopBoldface(),
    b' ',
    b'A',
    b' ',
    b'q',
    b'u',
    b'i',
    b'c',
    b'k',
    b' ',
    b'b',
    b'r',
    b'o',
    b'w',
    b'n',
    b' ',
    b'f',
    b'o',
    b'x',
    b' ',
    b'j',
    b'u',
    b'm',
    b'p',
    b'e',
    b'd',
    b' ',
    b'o',
    b'v',
    b'e',
    b'r',
    b' ',
    b't',
    b'h',
    b'e',
    b' ',
    b'l',
    b'a',
    b'z',
    b'y',
    b' ',
    b'd',
    b'o',
    b'g',
    SetQuality(Quality.DRAFT, scribe_mode=False),
    <CR>,
    <LF>,
    SetQuality(Quality.NEAR_LETTER_QUALITY, scribe_mode=False),
    StartBoldface(),
    b'n',
    b'e',
    b'a',
    b'r',
    b' ',
    b'l',
    b'e',
    b't',
    b't',
    b'e',
    b'r',
    b' ',
    b'q',
    b'u',
    b'a',
    b'l',
    b'i',
    b't',
    b'y',
    b':',
    StopBoldface(),
    b' ',
    b'A',
    b' ',
    b'q',
    b'u',
    b'i',
    b'c',
    b'k',
    b' ',
    b'b',
    b'r',
    b'o',
    b'w',
    b'n',
    b' ',
    b'f',
    b'o',
    b'x',
    b' ',
    b'j',
    b'u',
    b'm',
    b'p',
    b'e',
    b'd',
    b' ',
    b'o',
    b'v',
    b'e',
    b'r',
    b' ',
    b't',
    b'h',
    b'e',
    b' ',
    b'l',
    b'a',
    b'z',
    b'y',
    b' ',
    b'd',
    b'o',
    b'g',
    SetQuality(Quality.DRAFT, scribe_mode=False),
    <CR>,
    <LF>,
    SetQuality(Quality.DRAFT, scribe_mode=False),
    FormFeed(),
    <CR>,
  ])
# ---
